# qaguru-19

./: .gitignore  config.py  pyproject.toml
tests/bstack_mobile/android/: conftest.py  test_wikipedia.py
tests/bstack_mobile/ios/: conftest.py  test_demo_app.py
utils/: attach.py
